# fswatch

./: .gitignore
fswatch/src/: CMakeLists.txt  fswatch.cpp
libfswatch/: CMakeLists.txt
libfswatch/src/libfswatch/c++/: path_utils.cpp  poll_monitor.cpp
libfswatch/src/libfswatch/c++/windows/: win_paths.cpp  win_strings.cpp  win_strings.hpp
libfswatch/src/libfswatch/c++/windows/msys/: realpath.cpp  realpath.h
test/src/: CMakeLists.txt
